Fix for pre/table overflow, title h1->div

--- a/static/common.css
+++ b/static/common.css
@@ -33,7 +33,7 @@ body {
 
 main {
   max-width: 50rem;
-  width: fit-content;
+  width: 100vw;
   margin: auto;
 }
 
@@ -42,4 +42,16 @@ a {
 }
 a:hover {
   color: var(--link-hl);
+}
+
+pre {
+  display: block;
+  max-width: 100%;
+  overflow-x: auto;
+}
+
+table {
+  display: block;
+  max-width: 100%;
+  overflow-x: auto;
 }
